--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background-image: url(hand-painted-watercolor-background-with-sky-clouds-shape_24972-1095.jpg);
+    background-color:darkgrey;
 }
 
 .image{
